log
Fri 21 Apr 2023 01:00:45 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
12b342e
Fri 21 Apr 2023 01:08:49 AM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
165ec18
Fri 21 Apr 2023 01:10:15 AM UTC: 
 treemap.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 51 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:77:55: error: ‘TreeNode’ has no member named ‘key’
   77 |         int cmp_result = tree->lower_than(key, current->key);
      |                                                       ^~
treemap.c:96:55: error: ‘TreeNode’ has no member named ‘key’
   96 |             cmp_result = tree->lower_than(key, current->key);
      |                                                       ^~
Compilation failed
4470f27
Fri 21 Apr 2023 01:10:32 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c53b36a
Fri 21 Apr 2023 01:12:47 AM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++-----------------------
 1 file changed, 26 insertions(+), 23 deletions(-)
 tests:  11|6
total_score: 15/70
b0428ec
Fri 21 Apr 2023 01:13:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
32513ff
Fri 21 Apr 2023 01:16:32 AM UTC: 
 treemap.c | 72 ++++++++++++++++++++++++---------------------------------------
 1 file changed, 27 insertions(+), 45 deletions(-)
 tests:  13|5
total_score: 25/70
d9d5d32
Fri 21 Apr 2023 01:19:02 AM UTC: 
 treemap.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
 tests:  15|4
total_score: 25/70
e92c645
Fri 21 Apr 2023 01:20:07 AM UTC: 
 treemap.c | 45 +++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 45 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:13: error: ‘TreeNode’ has no member named ‘key’
  134 |         node->key = minNode->key;
      |             ^~
treemap.c:134:28: error: ‘TreeNode’ has no member named ‘key’
  134 |         node->key = minNode->key;
      |                            ^~
treemap.c:135:13: error: ‘TreeNode’ has no member named ‘value’
  135 |         node->value = minNode->value;
      |             ^~
treemap.c:135:30: error: ‘TreeNode’ has no member named ‘value’
  135 |         node->value = minNode->value;
      |                              ^~
Compilation failed
19c99f7
Fri 21 Apr 2023 01:20:51 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:37: error: ‘TreeNode’ has no member named ‘data’
  134 |         Pair* nodeData = (Pair*)node->data;
      |                                     ^~
treemap.c:135:43: error: ‘TreeNode’ has no member named ‘data’
  135 |         Pair* minNodeData = (Pair*)minNode->data;
      |                                           ^~
Compilation failed
a3cccac
Fri 21 Apr 2023 01:21:10 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
beab2f5
Fri 21 Apr 2023 01:23:05 AM UTC: 
 treemap.c | 29 +++++++++++------------------
 1 file changed, 11 insertions(+), 18 deletions(-)
 tests:  18|3
total_score: 40/70
539f587
Fri 21 Apr 2023 01:24:23 AM UTC: 
 treemap.c | 37 ++++++++++++++++++++++++-------------
 1 file changed, 24 insertions(+), 13 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:138:37: error: ‘TreeNode’ has no member named ‘data’
  138 |         Pair* nodeData = (Pair*)node->data;
      |                                     ^~
treemap.c:139:43: error: ‘TreeNode’ has no member named ‘data’
  139 |         Pair* minNodeData = (Pair*)minNode->data;
      |                                           ^~
Compilation failed
f083e41
Fri 21 Apr 2023 01:27:43 AM UTC: 
 treemap.c | 37 +++++++++++++++----------------------
 1 file changed, 15 insertions(+), 22 deletions(-)
 tests:  18|3
total_score: 40/70
afbbf82
Fri 21 Apr 2023 01:29:07 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:189:31: error: ‘TreeNode’ has no member named ‘data’
  189 |     return (Pair *)currentNode->data;
      |                               ^~
treemap.c: At top level:
treemap.c:191:5: error: expected identifier or ‘(’ before ‘return’
  191 |     return NULL;
      |     ^~~~~~
treemap.c:192:1: error: expected identifier or ‘(’ before ‘}’ token
  192 | }
      | ^
treemap.c: In function ‘firstTreeMap’:
treemap.c:190:1: error: control reaches end of non-void function [-Werror=return-type]
  190 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c474b8c
Fri 21 Apr 2023 01:29:42 AM UTC: 
 treemap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  18|3
total_score: 40/70
7800172
Fri 21 Apr 2023 01:31:26 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  18|3
total_score: 40/70
2b31920
Fri 21 Apr 2023 01:32:02 AM UTC: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  18|3
total_score: 40/70
9d29398
Sat 22 Apr 2023 02:42:36 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|3
total_score: 40/70
35744ad
Sat 22 Apr 2023 02:49:19 PM UTC: 
 treemap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  20|2
total_score: 45/70
c39331b
Sat 22 Apr 2023 02:49:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  20|2
total_score: 45/70
e01be0a
Sat 22 Apr 2023 02:55:20 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
7bcc626
Sat 22 Apr 2023 02:57:07 PM UTC: 
 treemap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  25|1
total_score: 60/70
f29060d
Sat 22 Apr 2023 02:58:29 PM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:177:23: error: ‘TreeMap’ has no member named ‘compare’
  177 |         int cmp = tree->compare(key, currentNode->pair->key);
      |                       ^~
Compilation failed
5e32ed2
Sat 22 Apr 2023 02:59:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:177:23: error: ‘TreeMap’ has no member named ‘is_equal’
  177 |         int cmp = tree->is_equal(key, currentNode->pair->key);
      |                       ^~
Compilation failed
dfdcfb4
Sat 22 Apr 2023 03:00:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:177:19: error: too few arguments to function ‘is_equal’
  177 |         int cmp = is_equal(key, currentNode->pair->key);
      |                   ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
aaf2bc2
Sat 22 Apr 2023 03:01:29 PM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  29|0
total_score: 70/70
3dac359
